package(default_visibility = ["//visibility:public"])

# pkg/agent
alias(
    name = "agent",
    actual = "//go/pkg/agent:agent",
)

alias(
    name = "agentgateway",
    actual = "//go/pkg/agentgateway:agentgateway",
)

# pkg/cli
alias(
    name = "cli",
    actual = "//go/pkg/cli:cli",
)

# pkg/config
alias(
    name = "config",
    actual = "//go/pkg/config:config",
)

alias(
    name = "config-bootstrap",
    actual = "//go/pkg/config/bootstrap:bootstrap",
)

# pkg/consumers
alias(
    name = "db-event-writer",
    actual = "//go/pkg/consumers/db-event-writer:db-event-writer",
)

# pkg/cpufreq
alias(
    name = "cpufreq",
    actual = "//go/pkg/cpufreq:cpufreq",
)

# pkg/db
alias(
    name = "db",
    actual = "//go/pkg/db:db",
)

# pkg/edgeonboarding
alias(
    name = "edgeonboarding",
    actual = "//go/pkg/edgeonboarding:edgeonboarding",
)

alias(
    name = "edgeonboarding-mtls",
    actual = "//go/pkg/edgeonboarding/mtls:mtls",
)

# pkg/deviceupdate
alias(
    name = "deviceupdate",
    actual = "//go/pkg/deviceupdate:deviceupdate",
)

# pkg/grpc
alias(
    name = "grpc",
    actual = "//go/pkg/grpc:grpc",
)

# pkg/integration_test
alias(
    name = "integration_test",
    actual = "//go/pkg/integration_test:integration_test",
)

# pkg/datasvc
alias(
    name = "datasvc",
    actual = "//go/pkg/datasvc:datasvc",
)

# pkg/lifecycle
alias(
    name = "lifecycle",
    actual = "//go/pkg/lifecycle:lifecycle",
)

# pkg/logger
alias(
    name = "logger",
    actual = "//go/pkg/logger:logger",
)

# pkg/mapper
alias(
    name = "mapper",
    actual = "//go/pkg/mapper:mapper",
)


# pkg/models
alias(
    name = "models",
    actual = "//go/pkg/models:models",
)

# pkg/monitoring
alias(
    name = "monitoring",
    actual = "//go/pkg/monitoring:monitoring",
)

# pkg/nats
alias(
    name = "nats-accounts",
    actual = "//go/pkg/nats/accounts:accounts",
)

# pkg/natsutil
alias(
    name = "natsutil",
    actual = "//go/pkg/natsutil:natsutil",
)

# pkg/scan
alias(
    name = "scan",
    actual = "//go/pkg/scan:scan",
)

# pkg/swagger
alias(
    name = "swagger",
    actual = "//go/pkg/swagger:swagger",
)

# pkg/sweeper
alias(
    name = "sweeper",
    actual = "//go/pkg/sweeper:sweeper",
)

# pkg/sysmon
alias(
    name = "sysmon",
    actual = "//go/pkg/sysmon:sysmon",
)

# pkg/version
alias(
    name = "version",
    actual = "//go/pkg/version:version",
)
