opam-version: "2.0"
name: "srql-translator"
version: "1.0.0"
synopsis: "An OCaml-based translator for the ServiceRadar Query Language"
maintainer: "Michael Freeman <mfreeman@carverauto.dev>"
authors: "Michael Freeman"
license: "Apache-2.0"

homepage: "https://github.com/carverauto/serviceradar"
bug-reports: "https://github.com/carverauto/serviceradar/issues"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.20"}
  "menhir"
  "yojson"
  "ppx_deriving" {>= "5.0"}
  "lwt_ppx"
  "proton" {>= "1.0.15"}
  "lwt"
  # lwt_ssl not used in code; avoid unnecessary OpenSSL dep
  "dream" {>= "1.0.0~alpha5"}
  "alcotest" {with-test}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
