# gazelle:ignore

load("@io_bazel_rules_go//go:def.bzl", "go_library")

# NOTE: The checked-in Go protobuf sources are retained for non-Bazel tooling.

filegroup(
    name = "kv_proto_src",
    srcs = ["kv.proto"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "monitoring_proto_src",
    srcs = ["monitoring.proto"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "data_service_proto_src",
    srcs = ["data_service.proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    srcs = [
        "core_service.pb.go",
        "core_service_grpc.pb.go",
        "data_service.pb.go",
        "data_service_grpc.pb.go",
        "kv.pb.go",
        "kv_grpc.pb.go",
        "mock_monitoring.go",
        "monitoring.pb.go",
        "monitoring_grpc.pb.go",
    ],
    importpath = "github.com/carverauto/serviceradar/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/identitymap/v1:identity_map",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_uber_go_mock//gomock",
    ],
)
