load("//build:mix_release.bzl", "mix_release")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*",
            "_build/**",
            "deps/**",
            "node_modules/**",
            "tmp/**",
            ".git/**",
        ],
    ),
)

mix_release(
    name = "release_tar",
    srcs = [":srcs"],
    out = "serviceradar-web-ng-release.tar.gz",
    src_dir = "web-ng",
)
