load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "faker_lib",
    srcs = ["main.go"],
    importpath = "github.com/carverauto/serviceradar/cmd/faker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/edgeonboarding:edgeonboarding",
        "//pkg/models:models",
    ],
)

go_binary(
    name = "faker",
    embed = [":faker_lib"],
    visibility = ["//visibility:public"],
)
