[package]
edition = "2018"
name = "serviceradar-flowgger"
version = "0.3.4"
authors = ["Frank Denis <github@pureftpd.org>", "Matteo Bigoi <bigo@crisidev.org>", "Vivien Chene <viv.chene@gmail.com>", "Francesco Berni <kurojishi@kurojishi.me>"]
build = "build.rs"
repository = "https://github.com/awslabs/flowgger"
description = "Flowgger is a fast, simple and lightweight data collector."
license = "ISC"
documentation="https://github.com/awslabs/flowgger/wiki"

[[bin]]
name = "serviceradar-flowgger"
path = "src/main.rs"

[lib]
name = "flowgger"
path = "src/lib.rs"

[features]
capnp-recompile = ["capnpc", "capnp"]
coroutines = ["may", "tls"]
default = ["syslog", "tls", "gelf" ]
redis-input = ["redis"]
kafka-output = ["kafka"]
nats-output = ["async-nats"]
tls = ["openssl"]
gelf = ["serde", "serde_json"]
ltsv = []
syslog = ["rfc5424", "rfc3164", "passthrough"]
rfc3164=[]
rfc5424=[]
passthrough=[]
file = ["notify", "glob"]

[build-dependencies.capnpc]
version = "0.10"
optional = true

[build-dependencies]
tonic-build = { workspace = true }

[dependencies]
capnp = { version = "0.14", optional = true }
clap = "4"
flate2 = "1"
glob = { version = "0.3", optional = true }
kafka = { version = "0.8", features = ["snappy", "gzip", "security"], optional = true }
async-nats  = { version = "0.42", optional = true }
log = "0.4"
notify = { version = "4.0", optional = true }
openssl = { version = "~0.10", optional = true }
rand = "0.8"
redis = { version = "0.32", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "~0.8", optional = true }
may = { version = "~0.3", optional = true }
toml = "0.5"
time = { version = "0.3", features = ["parsing", "formatting"] }
time-tz = "0.3"
tokio       = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = { workspace = true }
prost = { workspace = true }
tempfile = "3"
kvutil = { path = "../../rust/kvutil" }

[dev-dependencies]
tempdir = "0.3"
quickcheck = "1"

## Release profile now defined at workspace root to avoid non-root profile warning
