load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kv_lib",
    srcs = ["main.go"],
    importpath = "github.com/carverauto/serviceradar/cmd/kv",
    visibility = ["//visibility:private"],
    deps = [
        "//alias/config",
        "//alias/kv",
        "//alias/lifecycle",
        "//proto",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "kv",
    embed = [":kv_lib"],
    visibility = ["//visibility:public"],
)
