load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mapper_lib",
    srcs = ["main.go"],
    embedsrcs = ["config.json"],
    importpath = "github.com/carverauto/serviceradar/cmd/mapper",
    visibility = ["//visibility:private"],
    deps = [
        "//alias:config",
        "//alias:edgeonboarding",
        "//alias:lifecycle",
        "//alias:mapper",
        "//alias:models",
        "//alias:config-bootstrap",
        "//proto",
        "//proto/discovery",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "mapper",
    embed = [":mapper_lib"],
    visibility = ["//visibility:public"],
)
