[package]
name = "otel"
version = "0.1.0"
edition = "2024"

[lib]
name = "otel"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "otel"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-nats = "0.38"
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
tonic-build = "0.12"