load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "poller_lib",
    srcs = ["main.go"],
    importpath = "github.com/carverauto/serviceradar/cmd/poller",
    visibility = ["//visibility:private"],
    deps = [
        "//alias:config",
        "//alias:edgeonboarding",
        "//alias:lifecycle",
        "//alias:logger",
        "//alias:models",
        "//alias:poller",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "poller",
    embed = [":poller_lib"],
    visibility = ["//visibility:public"],
)
