load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "proton_tls_proxy_lib",
    srcs = ["main.go"],
    importpath = "github.com/carverauto/serviceradar/cmd/proton-tls-proxy",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "proton_tls_proxy",
    embed = [":proton_tls_proxy_lib"],
    visibility = ["//visibility:public"],
)
