load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sync_lib",
    srcs = ["main.go"],
    embedsrcs = ["config.json"],
    importpath = "github.com/carverauto/serviceradar/cmd/sync",
    visibility = ["//visibility:private"],
    deps = [
        "//alias:config",
        "//alias:edgeonboarding",
        "//alias:lifecycle",
        "//alias:models",
        "//alias:sync",
        "//alias:config-bootstrap",
        "//proto",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "sync",
    embed = [":sync_lib"],
    visibility = ["//visibility:public"],
)
